--- a/docs/tutorials/5a_train_preference_comparisons_with_cnn.ipynb
+++ b/docs/tutorials/5a_train_preference_comparisons_with_cnn.ipynb
@@ -29,6 +29,7 @@
    "source": [
     "import torch as th\n",
     "import gymnasium as gym\n",
+    "import ale_py\n",
     "from gymnasium.wrappers import TimeLimit\n",
     "import numpy as np\n",
     "\n",
@@ -260,7 +261,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +274,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
